# NCEPLIBS-ip

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile.in  README  README.build  README.iplib  README.md  Release_Notes.ip2lib.v1.0.0.txt  Release_Notes.iplib.v3.0.0.txt  Release_Notes.iplib.v3.0.1.txt  Release_Notes.iplib.v3.0.2.txt  annotated.html  annotated_dup.js  bicubic__interp__mod_8F90.html  bicubic__interp__mod_8F90.js  bicubic__interp__mod_8F90_source.html  bicubic__interp__mod_8f90.js  bilinear__interp__mod_8F90.html  bilinear__interp__mod_8F90.js  bilinear__interp__mod_8F90_source.html  bilinear__interp__mod_8f90_source.html  budget__interp__mod_8F90.html  budget__interp__mod_8F90.js  budget__interp__mod_8F90_source.html  budget__interp__mod_8f90.js  build_ip.sh  classes.html  configure  configure.ac  constants__mod_8F90.html  constants__mod_8F90_source.html  constants__mod_8f90.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  earth__radius_8f90_source.html  earth__radius__mod_8F90.html  earth__radius__mod_8F90.js  earth__radius__mod_8F90_source.html  (+409 more)
4byte/: CMakeLists.txt
8byte/: CMakeLists.txt
reg_tests/: .gitignore  Makeall.ksh  Makefile.in  README  Runall.ccs.ksh  Runall.theia.ksh  Runall.wcoss-cray.ksh  Runall.wcoss-dell.sh  Runall.wcoss.ksh  Runall.zeus.ksh  configure  configure.ac  make_reg_tests.ksh  make_reg_tests_wcoss-cray.sh
reg_tests/config-setup/: ifort.setup
reg_tests/copygb/: README
reg_tests/copygb/scripts/: copygb.ksh  makeall.ksh  regression.ksh  run.ccs.ksh  run.theia.ksh  run.wcoss-cray.lsf  run.wcoss-dell.lsf  run.wcoss.lsf  run.zeus.ksh  runall.ksh
reg_tests/copygb/sorc/: Makefile.in  copygb.f
reg_tests/copygb/src/: Makefile.in
reg_tests/copygb2/: README
reg_tests/copygb2/scripts/: copygb2.ksh  run.theia.ksh  run.wcoss.lsf
reg_tests/copygb2/sorc/: copygb2.f  makefile_4  makefile_8  makefile_d
reg_tests/gausslat/: README
reg_tests/gausslat/scripts/: makeall.ksh  runall.ksh
reg_tests/gausslat/sorc/: Makefile.in  make.filelist
reg_tests/gausslat/src/: Makefile.in  gausslat_driver.f  make.dependencies  make.filelist
reg_tests/gcdist/: README
reg_tests/gcdist/scripts/: runall.ksh
reg_tests/gcdist/src/: Makefile.in  gcdist_driver.f  make.dependencies  make.filelist  make.rules
reg_tests/gdswiz_wzd/: README
reg_tests/gdswiz_wzd/grads/: grid008.ctl  grid127.ctl  grid201.ctl  grid202.ctl  grid205.ctl  grid218.ctl
reg_tests/gdswiz_wzd/scripts/: runall.ksh
reg_tests/gdswiz_wzd/sorc/: Makefile.in  gdswiz_wzd.ctl.f90  gdswiz_wzd.f90  gdswiz_wzd.test.f90  gdswiz_wzd_ctl.f90  gdswiz_wzd_test.f90  make.filelist
reg_tests/gdswiz_wzd/src/: Makefile.in  gdswiz_wzd.f  make.dependencies  make.filelist
reg_tests/gdswzd/: README
reg_tests/gdswzd/grads/: grid003.ctl  grid127.ctl  grid203.ctl  grid203hv.ctl  grid213.ctl
reg_tests/gdswzd/scripts/: runall.ksh
reg_tests/gdswzd/sorc/: Makefile.in  gdswzd_driver.f90  make.filelist
reg_tests/ipmerge2/: README
reg_tests/ipmerge2/scripts/: makeall.ksh  runall.ksh
reg_tests/ipmerge2/src/: Makefile.in  ipmerge2_driver.f  make.dependencies  make.filelist
reg_tests/ipolates/: README
reg_tests/ipolates/grads/: grid003.ctl  grid008.ctl  grid127.ctl  grid212.ctl
reg_tests/ipolates/scripts/: compare.ksh  makeall.ksh  runall.ksh  runccs.1.thread.ksh  runccs.4.threads.ksh  runwcoss.1.thread.ksh  runzeus.1.thread.ksh  runzeus.4.threads.ksh
reg_tests/ipolates/sorc/: Makefile.in  get_input_data.f90  interp.f90  ipolates_driver.f90  make.dependencies  make.filelist
reg_tests/ipolates/src/: Makefile  Makefile.in  interp.f  ipolates_driver.f  make.dependencies  (+1 more)
reg_tests/ipolatev/: README
reg_tests/ipsector/: README
reg_tests/ipxetas/: README
reg_tests/ipxwafs/: README
reg_tests/ipxwafs2_3/: README
reg_tests/lib/: incmod_test_8
reg_tests/makgds/: README
reg_tests/movect/: README
reg_tests/polateg/: README
src/: CMakeLists.txt  Makefile  Makefile.in  bicubic_interp_mod.F90  bicubic_interp_mod.f90  bilinear_interp_mod.F90  bilinear_interp_mod.f90  budget_interp_mod.F90  budget_interp_mod.f90  constants_mod.F90  constants_mod.f90  earth_radius.f90  earth_radius_mod.F90  earth_radius_mod.f90  fftpack.F  gausslat.f90  gcdist.f  gdsawt.f90  gdswiz.f  gdswiz00.f  gdswiz01.f  gdswiz03.f  gdswiz03.f90  gdswiz04.f  gdswiz05.f  gdswiz05.f90  gdswizc9.f  gdswizca.f  gdswizcb.f  gdswizcd.f  gdswizcd.f90  gdswzd.f  gdswzd00.f  gdswzd00_mod.f90  gdswzd01.f  gdswzd01_mod.f90  gdswzd03.f  gdswzd03.f90  gdswzd03_mod.f90  gdswzd04.f  (+185 more)
tests/: CMakeLists.txt  README  README.md  input_data_mod.f90  input_data_mod_grib1.F90  input_data_mod_grib1.f90  input_data_mod_grib1_4.F90  input_data_mod_grib1_8.F90  input_data_mod_grib1_d.F90  input_data_mod_grib2.F90  input_data_mod_grib2_4.F90  input_data_mod_grib2_8.F90  input_data_mod_grib2_d.F90  interp_mod.f90  interp_mod_grib1.F90  interp_mod_grib1_4.F90  interp_mod_grib1_8.F90  interp_mod_grib1_d.F90  interp_mod_grib2.F90  interp_mod_grib2.f90  interp_mod_grib2_4.F90  interp_mod_grib2_8.F90  interp_mod_grib2_d.F90  test_earth_radius.F90  test_fft.F90  test_gdswzd.c  test_gdswzd_grib1.c  test_ipxwafs.F90  test_mod.pf  test_ncpus.F90  test_scalar.f90  test_scalar_grib1.F90  test_scalar_grib1.f90  test_scalar_grib2.F90  test_scalar_grib2.f90  test_splaplac.F90  test_splat.F90  test_sppad.F90  test_sptezv.F90  test_sptrung.F90  (+6 more)
tests/data/: README  sptrung.gi.in  sptrungv.ll.in  sptrungv.uv.out
tests/reg_tests/: Makefile.in  README  Runall.theia.ksh  Runall.wcoss-cray.ksh  Runall.wcoss-dell.sh  Runall.wcoss.ksh  configure  configure.ac  make_reg_tests.ksh  make_reg_tests_wcoss-cray.sh
tests/unit_test/: README  scalar_driver.f90  scalar_get_input_data.f90  scalar_interp.f90
tests/unit_test_for_c/: test_gdswzd_4.c  test_gdswzd_8.c
unit_test/sorc/: Makefile.in  configure  configure.ac  make.rules  make_unit_test.ksh  make_unit_test_wcoss-cray.ksh
unit_test/util/: Makefile.in  configure  configure.ac  diffgb.f  make.dependencies  make.filelist
(+1346 files in other folders)
