cmake_minimum_required(VERSION 2.6)
set(LIBNAME ${CMAKE_PROJECT_NAME}_${VERSION}_8)
file(GLOB LIB_8_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.f90 ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.F)
add_definitions( ${CMAKE_Fortran_8_FLAGS} )
add_library(${LIBNAME} STATIC ${LIB_8_SRC} )
set(CMAKE_INCLUDE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include_8")
set_target_properties(${LIBNAME} PROPERTIES Fortran_MODULE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include_8")
target_include_directories(${LIBNAME} PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/include_8")

install(TARGETS ${LIBNAME}
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib) 
install(DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY}/ DESTINATION include_8 )

